Fixed troubles on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -360,6 +360,9 @@ header{
 }
 
 @media screen and (max-width: 768px){
+  body{
+    font-size: .8em;
+  }
   header{
     display: none;
   }
